@ 스프링 챕터 1~5 새 버전 + 코드 결함 수정 + 스프링 부트 4 문법 정리
원고
- 챕터별 새 버전 생성 (01-v5, 02-v6, 03-v5, 04-v6, 05-v7), 원본 보존
- CH02: show-sql·format_sql·open-in-view 추가, SQL 블록을 하이버네이트 실제 출력 형식으로,
  2.7 JPQL 실행 코드 정합화, 2.8 트랜잭션 tip을 2.8.1 끝으로 이동, 쓰기 지연 절 재작성,
  flush() tip 신설, 그림 글자 크기 정규화
- CH03: JpaRepository 전환 시 기존 리포지토리·JPQL의 행방 설명 추가
- CH04: 조인 표에서 RIGHT·FULL JOIN 삭제, @Query·@Param 설명, 필터 자동 등록 설명
- CH05: 연관관계 주인 설명, @ToString.Exclude 설명

코드 결함
- CH01 리플렉션: 어노테이션 null 검사, getDeclaredConstructor().newInstance(), Class<?>
- CH05 Board.replies에 @ToString.Exclude·@EqualsAndHashCode.Exclude (양방향 무한 재귀 차단)
- 미사용 bcrypt 의존성 제거, 사실과 다른 BCrypt 주석 삭제
- Springv3Application -> SpringCh0NApplication

스프링 부트 4
- spring-boot-starter-web -> spring-boot-starter-webmvc
- 4.0.3 -> 4.0.7, java-jwt 4.3.0 -> 4.6.0, 스냅샷 저장소 제거
- java.sql.Timestamp -> java.time.LocalDateTime, java.util.Date -> java.time.Instant
- jakarta.transaction.Transactional -> org.springframework...Transactional

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01KtW9YkA8ry9q11fWHqxpLK
@